resized image added some meta tags

--- a/Edited website/index.html
+++ b/Edited website/index.html
@@ -5,7 +5,8 @@
 	<meta name="google-site-verification" content="YUUZQswa_jBe2WEyMYtmDLHiFIMIFNW1nUXMQR3xnI8" />
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
@@ -13,7 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
-    
+    <link rel="canonical" href="https://swanndolia.github.io/ThomasLannoy_4_20102020/Edited%20website/" />
 	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
 	<script src="./js/blocs.js"></script>
