--- a/Edited website/index.html
+++ b/Edited website/index.html
@@ -18,13 +18,16 @@
     <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
 
     <link rel="canonical" href="https://swanndolia.github.io/ThomasLannoy_4_20102020/Edited%20website/" />
-    <script src="./js/jquery-2.1.0.js" defer></script>
-    <script src="./js/bootstrap.js" async></script>
-    <script src="./js/blocs.js" async></script>
-    <script src="./js/jquery.touchSwipe.js" defer></script>
-    <script src="./js/gmaps.js" async></script>
 
-    <title>.</title>
+    <script src="./js/jquery-2.1.0.js"></script>
+    <script src="./js/bootstrap.js"></script>
+    <script src="./js/blocs.js"></script>
+    <script src="./js/jquery.touchSwipe.js" defer></script>
+    <script src="./js/gmaps.js"></script>
+    <script src="./js/jqBootstrapValidation.js"></script>
+    <script src="./js/formHandler.js"></script>
+
+    <title>La chouette agence</title>
 
     <!-- Analytics -->
 
@@ -57,9 +60,6 @@
                   <a href="index.html">Accueil</a>
                 </li>
                 <li></li>
-                <li>
-                  <a href="page2.html">page2 &gt;</a>
-                </li>
               </ul>
             </div>
           </nav>
@@ -75,7 +75,7 @@
               <img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web paris, création logo paris" />
               <h1 class="text-center hero-bloc-text tc-white">La chouette agence.</h1>
               <div class="text-center">
-                <a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+                <a href="#bloc-7" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
               </div>
             </div>
           </div>
@@ -145,7 +145,7 @@
                 Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner
                 un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous
                 contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de
-                recherche. <br /><br /><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br />
+                recherche. <br /><br /><a class="ltc-white bold-link" href="#bloc-7">Contactez notre équipe</a><br />
               </p>
             </div>
           </div>
@@ -232,12 +232,69 @@
           <div class="row">
             <h2 class="mg-md text-center tc-white">Prêt pour redonner vie à votre projet ?<br />Contactez notre équipe !</h2>
             <div class="col-sm-12 text-center">
-              <a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+              <a href="#bloc-7" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
             </div>
           </div>
         </div>
       </div>
       <!-- bloc-5-cta END -->
+
+      <!-- bloc-6 -->
+      <div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+        <div class="container bloc-lg">
+          <div class="row">
+            <div class="col-sm-12">
+              <h1 class="text-center hero-bloc-text tc-white">Parlons web design !</h1>
+              <p class="text-center mg-lg tc-white tight-width-whitespace">
+                Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br />
+                Parlez-nous de votre projet en complétant le formulaire ci-dessous.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- bloc-6 END -->
+      <!-- bloc-7 -->
+      <div class="bloc bgc-white l-bloc" id="bloc-7">
+        <div class="container bloc-lg">
+          <div class="row">
+            <div class="col-sm-6">
+              <form
+                id="form_1"
+                novalidate
+                success-msg="Your message has been sent."
+                fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"
+              >
+                <div class="form-group">
+                  <label> Nom </label>
+                  <input id="name" class="form-control" required />
+                </div>
+                <div class="form-group">
+                  <label> Adresse email </label>
+                  <input id="email" class="form-control" type="email" required />
+                </div>
+                <div class="form-group">
+                  <label> Comment nous avez-vous connu ? </label>
+                  <input class="form-control" type="email" required id="input_504" />
+                </div>
+                <div class="form-group">
+                  <label> Brief de votre projet (Ajoutez autant de détails que nécessaire)<br /> </label
+                  ><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+                </div>
+                <button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">Envoyer</button>
+              </form>
+            </div>
+            <div class="col-sm-6">
+              <p>contact@lachouetteagence.com<br />2 place Sathonay 69001 Lyon<br />Ouvert de 9h à 18h, du lundi au vendredi<br /></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- bloc-7 END -->
+
+      <!-- ScrollToTop Button -->
+      <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+      <!-- ScrollToTop Button END-->
 
       <!-- Footer - bloc-8 -->
       <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
