--- a/Edited website/index.html
+++ b/Edited website/index.html
@@ -45,7 +45,7 @@
                 Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site
               </div>
               <a class="navbar-brand" href="index.html"
-                ><img src="img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence" height="40"
+                ><img src="img/la-chouette-agence.png" alt="La chouette agence" height="40"
               /></a>
               <div class="keywords" style="color: #cccccc; font-size: 1px">
                 Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site
@@ -72,7 +72,7 @@
         <div class="container bloc-lg">
           <div class="row tight-width-whitespace">
             <div class="col-sm-12">
-              <img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web paris, création logo paris" />
+              <img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence logo" />
               <h1 class="text-center hero-bloc-text tc-white">La chouette agence.</h1>
               <div class="text-center">
                 <a href="#bloc-7" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
@@ -88,7 +88,7 @@
         <div class="container bloc-md">
           <div class="row">
             <div class="col-sm-12 text-center">
-              <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+              <h2>La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet</h2>
             </div>
           </div>
           <div class="row voffset-lg med-width-whitespace">
@@ -125,7 +125,7 @@
           </div>
           <div class="row voffset-lg voffset">
             <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-              <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
+              <img alt="ciatation maxime guibard" src="img/citation.png" />
             </div>
           </div>
         </div>
@@ -158,7 +158,7 @@
         <div class="container bloc-lg">
           <div class="row">
             <div class="col-sm-12 text-center">
-              <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+              <h2>Nous travaillons avec beaucoup de clients,<br />voici nos réalisations.</h2>
             </div>
           </div>
           <div class="row tight-width-whitespace portfolio-row">
@@ -171,7 +171,7 @@
                 data-frame="snapshot-lb"
                 ><img
                   src="img/1.jpg"
-                  alt="paris web design logo agence web meilleure agence et refonte site web journal"
+                  alt="présentation site journal local"
                   class="img-responsive portfolio-thumb"
               /></a>
               <h3 class="mg-md text-center">Refonte d'un site web pour un journal local</h3>
@@ -182,7 +182,7 @@
                 ><img
                   src="img/2.jpg"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes"
+                  alt="présentation site photographes"
               /></a>
               <h3 class="mg-md text-center">Création d'un site web pour photographes</h3>
               <p class="text-center">Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.</p>
@@ -199,7 +199,7 @@
                 ><img
                   src="img/3.jpg"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"
+                  alt="présentation site voyageur"
               /></a>
               <h3 class="mg-md text-center">Création d'un site internet pour un voyageur</h3>
               <p class="text-center">Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.</p>
@@ -214,7 +214,7 @@
                 ><img
                   src="img/4.jpg"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"
+                  alt="présentation site agence mariage"
               /></a>
               <h3 class="mg-md text-center">Conception d'un site pour une agence de mariage</h3>
               <p class="text-center">
