optimized js loading redo htaccess

--- a/Edited website/index.html
+++ b/Edited website/index.html
@@ -2,7 +2,6 @@
 <html lang="Default">
   <head>
     <meta charset="utf-8" />
-    <meta name="google-site-verification" content="YUUZQswa_jBe2WEyMYtmDLHiFIMIFNW1nUXMQR3xnI8" />
     <meta
       name="keywords"
       content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design"
@@ -10,28 +9,20 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <meta name="robots" content="index, follow" />
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
-
+    <link rel="shortcut icon" type="image/jpg" href="favicon.jpg" />
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
-
     <link rel="canonical" href="https://swanndolia.github.io/ThomasLannoy_4_20102020/Edited%20website/" />
-
     <script src="./js/jquery-2.1.0.js"></script>
-    <script src="./js/bootstrap.js"></script>
-    <script src="./js/blocs.js"></script>
+    <script src="./js/bootstrap.js" defer></script>
+    <script src="./js/blocs.js" async defer></script>
     <script src="./js/jquery.touchSwipe.js" defer></script>
-    <script src="./js/gmaps.js"></script>
+    <script src="./js/gmaps.js" async defer></script>
     <script src="./js/jqBootstrapValidation.js"></script>
-    <script src="./js/formHandler.js"></script>
-
+    <script src="./js/formHandler.js" defer></script>
     <title>La chouette agence</title>
-
-    <!-- Analytics -->
-
-    <!-- Analytics END -->
   </head>
   <body>
     <!-- Principal conteneur -->
@@ -44,9 +35,7 @@
               <div class="keywords" style="color: #cccccc; font-size: 1px">
                 Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site
               </div>
-              <a class="navbar-brand" href="index.html"
-                ><img src="img/la-chouette-agence.png" alt="La chouette agence" height="40"
-              /></a>
+              <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="La chouette agence" height="40" /></a>
               <div class="keywords" style="color: #cccccc; font-size: 1px">
                 Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site
               </div>
@@ -169,20 +158,14 @@
                 data-gallery-id="gallery-1"
                 data-caption="Refonte d'un site web pour un journal local"
                 data-frame="snapshot-lb"
-                ><img
-                  src="img/1.jpg"
-                  alt="présentation site journal local"
-                  class="img-responsive portfolio-thumb"
+                ><img src="img/1.jpg" alt="présentation site journal local" class="img-responsive portfolio-thumb"
               /></a>
               <h3 class="mg-md text-center">Refonte d'un site web pour un journal local</h3>
               <p class="text-center">Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.</p>
             </div>
             <div class="col-sm-6">
               <a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"
-                ><img
-                  src="img/2.jpg"
-                  class="img-responsive portfolio-thumb"
-                  alt="présentation site photographes"
+                ><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="présentation site photographes"
               /></a>
               <h3 class="mg-md text-center">Création d'un site web pour photographes</h3>
               <p class="text-center">Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.</p>
@@ -196,10 +179,7 @@
                 data-gallery-id="gallery-1"
                 data-caption="Création d'un site internet pour un voyageur"
                 data-frame="snapshot-lb"
-                ><img
-                  src="img/3.jpg"
-                  class="img-responsive portfolio-thumb"
-                  alt="présentation site voyageur"
+                ><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="présentation site voyageur"
               /></a>
               <h3 class="mg-md text-center">Création d'un site internet pour un voyageur</h3>
               <p class="text-center">Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.</p>
@@ -211,10 +191,7 @@
                 data-gallery-id="gallery-1"
                 data-caption="Conception d'un site pour une agence de mariage"
                 data-frame="snapshot-lb"
-                ><img
-                  src="img/4.jpg"
-                  class="img-responsive portfolio-thumb"
-                  alt="présentation site agence mariage"
+                ><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="présentation site agence mariage"
               /></a>
               <h3 class="mg-md text-center">Conception d'un site pour une agence de mariage</h3>
               <p class="text-center">
