--- a/new/index.html
+++ b/new/index.html
@@ -15,13 +15,6 @@
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
     <link rel="canonical" href="https://swanndolia.github.io/ThomasLannoy_4_20102020/Edited%20website/" />
-    <script src="./js/jquery-2.1.0.js"></script>
-    <script src="./js/bootstrap.js" defer></script>
-    <script src="./js/blocs.js" async defer></script>
-    <script src="./js/jquery.touchSwipe.js" defer></script>
-    <script src="./js/gmaps.js" async defer></script>
-    <script src="./js/jqBootstrapValidation.js"></script>
-    <script src="./js/formHandler.js" defer></script>
     <title>La chouette agence</title>
   </head>
   <body>
@@ -77,7 +70,7 @@
         <div class="container bloc-md">
           <div class="row">
             <div class="col-sm-12 text-center">
-              <h2>La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet</h2>
+              <h2>La chouette agence est une agence de web design qui aide<br />les entreprises à devenir attractives et visibles sur Internet</h2>
             </div>
           </div>
           <div class="row voffset-lg med-width-whitespace">
@@ -252,7 +245,7 @@
                 </div>
                 <div class="form-group">
                   <label> Comment nous avez-vous connu ? </label>
-                  <input class="form-control" type="email" required id="input_504" />
+                  <input class="form-control" required id="input_504" />
                 </div>
                 <div class="form-group">
                   <label> Brief de votre projet (Ajoutez autant de détails que nécessaire)<br /> </label
@@ -274,7 +267,7 @@
       <!-- ScrollToTop Button END-->
 
       <!-- Footer - bloc-8 -->
-      <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+      <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
         <div class="container bloc-sm">
           <div class="row">
             <div class="col-sm-12">
@@ -346,9 +339,16 @@
             </div>
           </div>
         </div>
-      </div>
+      </footer>
       <!-- Footer - bloc-8 END -->
     </div>
+    <script src="./js/jquery-2.1.0.js"></script>
+    <script src="./js/bootstrap.js" ></script>
+    <script src="./js/blocs.js"></script>
+    <script src="./js/jquery.touchSwipe.js" defer></script>
+    <script src="./js/gmaps.js"></script>
+    <script src="./js/jqBootstrapValidation.js"></script>
+    <script src="./js/formHandler.js" defer></script>
     <!-- Principal conteneur END -->
   </body>
 </html>
