--- a/new/index.html
+++ b/new/index.html
@@ -2,11 +2,8 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="keywords"
-      content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design"
-    />
-    <meta name="description" content="" />
+    <meta name="keywords" content="seo,la chouette agence,web design,agence web paris,stratégie web,illustrations,design de site web" />
+    <meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises avec leur SEO afin de gagner en visibilité" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <meta name="robots" content="index, follow" />
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpg" />
@@ -14,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
-    <link rel="canonical" href="https://swanndolia.github.io/ThomasLannoy_4_20102020/Edited%20website/" />
+    <link rel="canonical" href="https://swanndolia.github.io/ThomasLannoy_4_20102020/new/" />
     <title>La chouette agence</title>
   </head>
   <body>
@@ -25,13 +22,7 @@
         <div class="container bloc-sm">
           <nav class="navbar row">
             <div class="navbar-header">
-              <div class="keywords" style="color: #cccccc; font-size: 1px">
-                Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site
-              </div>
               <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="La chouette agence" height="40" /></a>
-              <div class="keywords" style="color: #cccccc; font-size: 1px">
-                Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site
-              </div>
               <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
                 <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
               </button>
@@ -214,7 +205,7 @@
         <div class="container bloc-lg">
           <div class="row">
             <div class="col-sm-12">
-              <h1 class="text-center hero-bloc-text tc-white">Parlons web design !</h1>
+              <h2 class="text-center hero-bloc-text tc-white">Parlons web design !</h2>
               <p class="text-center mg-lg tc-white tight-width-whitespace">
                 Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br />
                 Parlez-nous de votre projet en complétant le formulaire ci-dessous.
@@ -267,7 +258,7 @@
       <!-- ScrollToTop Button END-->
 
       <!-- Footer - bloc-8 -->
-      <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+      <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
         <div class="container bloc-sm">
           <div class="row">
             <div class="col-sm-12">
@@ -292,9 +283,6 @@
                   <div class="text-center">
                     <a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
                   </div>
-                </div>
-                <div class="keywords" style="color: #f3976c">
-                  Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site
                 </div>
               </div>
               <div class="row">
@@ -339,11 +327,11 @@
             </div>
           </div>
         </div>
-      </footer>
+      </div>
       <!-- Footer - bloc-8 END -->
     </div>
     <script src="./js/jquery-2.1.0.js"></script>
-    <script src="./js/bootstrap.js" ></script>
+    <script src="./js/bootstrap.js"></script>
     <script src="./js/blocs.js"></script>
     <script src="./js/jquery.touchSwipe.js" defer></script>
     <script src="./js/gmaps.js"></script>
