--- a/new/index.html
+++ b/new/index.html
@@ -98,7 +98,13 @@
           </div>
           <div class="row voffset-lg voffset">
             <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-              <img alt="ciatation maxime guibard" src="img/citation.png" />
+              <h2>
+                <i
+                  >"La chouette agence est une excellente agence web ! Les<br />web designers ont réussi à capturer l'essence de notre<br />entreprise et à
+                  l'intégrer à notre site. Cela nous a aidé à<br />
+                  doubler nos ventes en ligne à Lyon."</i
+                ><h5>Maxime guibard, PDG de A vos fourchettes</h5>
+              </h2>
             </div>
           </div>
         </div>
