more edits to js script loading

--- a/new/index.html
+++ b/new/index.html
@@ -6,11 +6,6 @@
     <meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises avec leur SEO afin de gagner en visibilité" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <meta name="robots" content="index, follow" />
-    <script src="./js/gmaps.js"></script>
-    <script src="./js/jqBootstrapValidation.js"></script>
-    <script src="./js/jquery-2.1.0.js"></script>
-    <script src="./js/bootstrap.js"></script>
-    <script src="./js/blocs.js"></script>
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpg" />
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -341,8 +336,13 @@
       </div>
       <!-- Footer - bloc-8 END -->
     </div>
-    <script src="./js/jquery.touchSwipe.js" defer></script>
     <script src="./js/formHandler.js" defer></script>
     <!-- Principal conteneur END -->
   </body>
+  <script src="./js/gmaps.js" async></script>
+  <script src="./js/jquery-2.1.0.js" defer></script>
+  <script src="./js/bootstrap.js" defer></script>
+  <script src="./js/blocs.js" defer></script>
+  <script src="./js/jqBootstrapValidation.js" defer></script>
+  <script src="./js/jquery.touchSwipe.js" defer></script>
 </html>
