--- a/new/index.html
+++ b/new/index.html
@@ -339,10 +339,10 @@
     <script src="./js/formHandler.js" defer></script>
     <!-- Principal conteneur END -->
   </body>
-  <script src="./js/gmaps.js" async></script>
+  <script src="./js/gmaps.js" async defer></script>
   <script src="./js/jquery-2.1.0.js" defer></script>
-  <script src="./js/bootstrap.js" defer></script>
-  <script src="./js/blocs.js" defer></script>
-  <script src="./js/jqBootstrapValidation.js" defer></script>
-  <script src="./js/jquery.touchSwipe.js" defer></script>
+  <script src="./js/bootstrap.js" async></script>
+  <script src="./js/blocs.js" async></script>
+  <script src="./js/jqBootstrapValidation.js" async defer></script>
+  <script src="./js/jquery.touchSwipe.js" async defer></script>
 </html>
