fixed some weird edited of js scripts

--- a/new/index.html
+++ b/new/index.html
@@ -336,13 +336,11 @@
       </div>
       <!-- Footer - bloc-8 END -->
     </div>
-    <script src="./js/formHandler.js" defer></script>
+    <script src="./js/jquery-2.1.0.js"></script>
+    <script src="./js/bootstrap.js" ></script>
+    <script src="./js/blocs.js" ></script>
+    <script src="./js/jquery.touchSwipe.js" defer></script>
+    <script src="./js/formHandler.js" async defer></script>
     <!-- Principal conteneur END -->
   </body>
-  <script src="./js/gmaps.js" async defer></script>
-  <script src="./js/jquery-2.1.0.js" defer></script>
-  <script src="./js/bootstrap.js" async></script>
-  <script src="./js/blocs.js" async></script>
-  <script src="./js/jqBootstrapValidation.js" async defer></script>
-  <script src="./js/jquery.touchSwipe.js" async defer></script>
 </html>
