color change for accessibility

--- a/new/index.html
+++ b/new/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="Default">
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <meta name="keywords" content="seo,la chouette agence,web design,agence web paris,stratégie web,illustrations,design de site web" />
@@ -290,7 +290,7 @@
                   </div>
                 </div>
               </div>
-              <div class="row">
+              <div class="row" id="footer">
                 <div class="col-sm-4">
                   Partenaires
                   <ul>
