--- a/P4_02_code_source/index.html
+++ b/P4_02_code_source/index.html
@@ -15,7 +15,7 @@
     <title>La chouette agence</title>
   </head>
   <body>
-    <!-- Principal conteneur -->
+    <!-- Principal conteneur --> 
     <div class="page-container">
       <!-- bloc-0 -->
       <div class="bloc bgc-white l-bloc" id="bloc-0">
@@ -46,7 +46,7 @@
           <div class="row tight-width-whitespace">
             <div class="col-sm-12">
               <img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence logo" />
-              <h1 class="text-center hero-bloc-text tc-white">La chouette agence.</h1>
+              <h1 class="text-center hero-bloc-text tc-white">La chouette agence</h1>
               <div class="text-center">
                 <a href="#bloc-7" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
               </div>
@@ -285,34 +285,6 @@
                     <li><a href="pizza.com">pizza.com</a></li>
                     <li><a href="matoiture.com">matoiture.com</a></li>
                     <li><a href="immobilierseo.com">immobilierseo.com</a></li>
-                  </ul>
-                </div>
-                <div class="col-sm-4">
-                  Annuaires liste 1
-                  <ul>
-                    <li><a href="annuaireagence.com">annuaireagence.com</a></li>
-                    <li><a href="annuaireseo.com">annuaireseo.com</a></li>
-                    <li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-                    <li><a href="123seoture.com">123seo.com</a></li>
-                    <li><a href="123site.com">123site.com</a></li>
-                    <li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-                    <li><a href="listeagence.com">listeagence.com</a></li>
-                    <li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-                    <li><a href="listeseo.com">listeseo.com</a></li>
-                  </ul>
-                </div>
-                <div class="col-sm-4">
-                  Annuaires liste 2
-                  <ul>
-                    <li><a href="betterseo.com">betterseo.com</a></li>
-                    <li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-                    <li><a href="seojuicelien.com">seojuicelien.com</a></li>
-                    <li><a href="meilleursliens.com">meilleursliens.com</a></li>
-                    <li><a href="liensagogo.com">liensagogo.com</a></li>
-                    <li><a href="backlink.com">backlink.com</a></li>
-                    <li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-                    <li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-                    <li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
                   </ul>
                 </div>
               </div>
